[package]
name = "manager_environment_service"
version = "0.1.0"
authors = ["Gabriel S <gabrielsouza849@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
env_logger="0.8.2"

